Sun Jan 13 05:20:59 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/type/ArrayType.java (size): returns pointer
	  size if the type is not allocated.

	* test/test.sh: test integer.cb.

	* test/test.sh: test initializer.cb.

	* test/test.sh: test test2.cb.

	* test/test.sh: test test3.cb.

	* test/test.sh: test test4.cb.

	* test/test2.cb: long long is not supported now.

	* test/test4.cb: f -> main to make compilable.

	* test/list-untested.rb: new tool.

Sun Jan 13 04:48:28 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: fork
	  DereferenceChecker, to reduce catch(SemanticError).

	* net/loveruby/cflat/compiler/DereferenceChecker.java: new class.

	* net/loveruby/cflat/ast/ExprNode.java (isAssignable,
	  isDereferable): catch SemanticError which may occuer on
	  type.isXXXX.

	* net/loveruby/cflat/compiler/Visitor.java: refactoring: rename
	  method: #resolve -> #visitNode.

	* net/loveruby/cflat/compiler/Visitor.java: refactoring: rename
	  method: #resolveNodeList -> #visitNodeList.

	* net/loveruby/cflat/compiler/JumpResolver.java: ditto.

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java: ditto.

	* net/loveruby/cflat/compiler/TypeResolver.java: ditto.

	* net/loveruby/cflat/compiler/TypeChecker.java: ditto.

	* net/loveruby/cflat/compiler/Compiler.java: parse command line
	  options more precisely.

	* net/loveruby/cflat/compiler/Compiler.java: new option --compile.

	* net/loveruby/cflat/compiler/Compiler.java: new option
	  --dump-reference.

	* net/loveruby/cflat/compiler/Compiler.java: new option
	  --dump-semantic.

	* net/loveruby/cflat/ast/VariableNode.java (dump): show resolved
	  or not.

	* net/loveruby/cflat/ast/TypeNode.java (dump): ditto.

	* net/loveruby/cflat/ast/Dumper.java (printMember): ditto.

Sun Jan 13 04:47:12 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/type/Type.java: make #isCompatible and
	  #isCastable abstract.
