@@ -1,0 +1,8 @@
+void f(void) {
+    1[0][0];
+    1[0].memb;
+    1[0]->memb;
+    *(1[0]);
+    1[0]();
+    &(1[0]);
+}
